# email_newsletter

./: .env  Cargo.toml  Dockerfile.geni  Makefile  README.md  docker-compose.yaml
migrations/: 1734944764_create_subscriptions_table.down.sql  1734944764_create_subscriptions_table.up.sql  schema.sql
src/: main.rs
src/lib/: http.rs  lib.rs
src/lib/http/: handlers.rs
src/lib/http/handlers/: health.rs  shared.rs  subscriptions.rs
