[package]
name = "email_newsletter"
version = "0.1.0"
authors = ["Charlie Roth https://github.com/charlieroth"]
edition = "2021"

[lib]
name = "email_newsletter"
path = "src/lib/lib.rs"

[[bin]]
name = "email_newsletter_server"
path = "src/bin/server/main.rs"

[dependencies]
axum = "0.7.9"
anyhow = "1.0.95"
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
serde = { version = "1.0.215", features = ["std", "derive"] }
tokio = { version = "1.42", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tower-layer = "0.3.3"
dotenvy = "0.15.7"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
] }
config = "0.15.4"

[dev-dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
